--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 html {
   color-scheme: light;
@@ -15,22 +15,77 @@ body {
   line-height: 1.5;
 }
 
+a {
+  text-decoration: none;
+}
+
 main {
+  margin: 0 auto;
+  width: max(80%, 1200px);
+  min-height: 100vh;
+}
+
+.hero-title {
+  text-align: center;
+}
+
+.card-grid {
   display: grid;
   place-items: center;
-  height: 70vh;
+  grid-template-columns: repeat(3, 1fr);
+  /* min-height: 60vh; */
 }
 
 .card {
-  width: 190px;
-  height: 254px;
-  margin: 0 auto;
-  background-color: #F8FBFE;
-  border-radius: 8px;
-  z-index: 1;
+  display: flex;
+  align-items: end;
+  justify-content: start;
+
+  background-size: cover;
+  width: max(20vw, 350px);
+  aspect-ratio: 1 / 1.3;
+  margin-bottom: 1rem;
+  border-radius: 20px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  cursor: pointer;
+
+  transition: all 300ms;
+}
+
+.card:hover {
+  transform: scale(1.01);
+}
+
+.image-one {
+  background-image: url(./images/kare-kare.jpg);
+}
+
+.image-two {
+  background-image: url(./images/fried-checken.jpg);
+}
+
+.image-three {
+  background-image: url(./images/chicken-adobo.jpg);
 }
 
 
-.card {
-  background-image: url(./recipes/);
+.card-content {
+  color: white;
+  margin: 2rem;
+}
+
+.card-title,
+.card-description {
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
+}
+
+
+.card-title {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.card-description {
+  font-size: .8rem;
 }
